--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /revisions/
 Toronto_Health_Accessibility.Rproj
 Toronto_Health_Accessibility.Rproj
+/toronto_code/Untititled*
+/toronto_code/1.9*
+/toronto_code/1.7_travel_times_income*
+/toronto_code/1.8_*
+
+
+
+
