--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 /revisions/
 Toronto_Health_Accessibility.Rproj
 Toronto_Health_Accessibility.Rproj
-/toronto_code/Untititled*
-/toronto_code/1.9*
-/toronto_code/1.7_travel_times_income*
-/toronto_code/1.8_*
+toronto_code/Untititled*
+toronto_code/1.9*
+toronto_code/1.7_travel_times_income*
+toronto_code/1.8_*
 
 
 
