--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 /revisions/
 Toronto_Health_Accessibility.Rproj
 Toronto_Health_Accessibility.Rproj
-toronto_code/1.9*
-toronto_code/1.7_travel_times_income*
-toronto_code/1.8_*
+/toronto_code/1.9_time_change_results.ipynb
+/toronto_code/1.7_travel_times_income*
+/toronto_code/1.8_*
 
 
 
