--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Toronto_Health_Accessibility.Rproj
 /toronto_code/1.9_time_change_results.ipynb
 /toronto_code/1.7_travel_times_income*
 /toronto_code/1.8_*
-
+/toronto_code/
 
 
 
